k8s/smarthome/overlays/frigate/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frigate
    spec:
      # use initContainer to make config.yml rw (editable in browser)
      containers:
        - name: app
          securityContext:
            capabilities:
              add: ["PERFMON"]
          resources:
            limits:
              gpu.intel.com/i915: 1
              cpu: 500m
              memory: 1024Mi
          ports:
            - name: http
              containerPort: 5000
            - name: rtmp
              containerPort: 1935
          volumeMounts:
            - name: downloads
              mountPath: /media/frigate
              subPath: frigate/
            - name: cache
              mountPath: /tmp/cache
            - name: config
              mountPath: /config/
            - name: shm
              mountPath: /dev/shm
      volumes:
        - name: cache
          emptyDir:
            sizeLimit: 1Gi
        - name: config-map
          configMap:
            name: frigate-configmap
        - name: config
          emptyDir: {}
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
