k8s/smarthome/overlays/frigate/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: rtmp
      port: 1935
      targetPort: 1935
      protocol: TCP
