k8s/smarthome/overlays/frigate/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - frigate.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: frigate.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate-service
                port:
                  name: http
